--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,8 @@
   align-items: flex-start;
   justify-content: flex-start;
   overflow-y: auto;
+  z-index: 9999;
+  background-color: rgb(65, 61, 61);
 }
 
 .chat-bubble {
@@ -53,7 +55,7 @@
 }
 
 .chatbot {
-  background-color: #ccc;
+  background-color: #0f0f0f;
   align-self: flex-start;
 }
 
@@ -83,6 +85,7 @@
   display: flex;
   align-items: center;
   padding: 10px;
+  background-color: #212529;
 }
 
 input {
